@@ -20,6 +20,7 @@
 *.suo
 *.res
 *.vcproj.*.user
+*.vcxproj.user
 *~
 .#*
 .*.rej
