@@ -299,6 +299,9 @@
 #define DCIDESC_AGENT_UNSUPPORTEDREQUESTS         _T("Number of requests for unsupported parameters")
 #define DCIDESC_AGENT_UPTIME                      _T("Agent's uptime")
 #define DCIDESC_AGENT_VERSION                     _T("Agent's version")
+#define DCIDESC_SYSTEM_BIOS_DATE                  _T("BIOS date")
+#define DCIDESC_SYSTEM_BIOS_VENDOR                _T("BIOS vendor")
+#define DCIDESC_SYSTEM_BIOS_VERSION               _T("BIOS version")
 #define DCIDESC_FILE_COUNT                        _T("Number of files {instance}")
 #define DCIDESC_FILE_FOLDERCOUNT                  _T("Number of folders {instance}")
 #define DCIDESC_FILE_HASH_CRC32                   _T("CRC32 checksum of {instance}")
@@ -333,6 +336,11 @@
 #define DCIDESC_SYSTEM_APPADDRESSSPACE            _T("Address space available to applications (MB)")
 #define DCIDESC_SYSTEM_CONNECTEDUSERS             _T("Number of logged in users")
 #define DCIDESC_SYSTEM_HANDLECOUNT                _T("Total number of handles")
+#define DCIDESC_SYSTEM_HARDWARE_MANUFACTURER      _T("Hardware manufacturer")
+#define DCIDESC_SYSTEM_HARDWARE_PRODUCT           _T("Hardware product name")
+#define DCIDESC_SYSTEM_HARDWARE_SERIALNUMBER      _T("Hardware serial number")
+#define DCIDESC_SYSTEM_HARDWARE_VERSION           _T("Hardware version")
+#define DCIDESC_SYSTEM_HARDWARE_WAKEUPEVENT       _T("Hardware wakeup event")
 #define DCIDESC_SYSTEM_PROCESSCOUNT               _T("Total number of processes")
 #define DCIDESC_SYSTEM_SERVICESTATE               _T("State of {instance} service")
 #define DCIDESC_SYSTEM_THREADCOUNT                _T("Total number of threads")
