@@ -175,8 +175,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bios.cpp" />
     <ClCompile Include="cpu.cpp" />
     <ClCompile Include="fs.cpp" />
+    <ClCompile Include="hypervisor.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="net.cpp" />
     <ClCompile Include="procinfo.cpp" />
