@@ -36,6 +36,12 @@
     <ClCompile Include="fs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bios.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hypervisor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\nms_agent.h">
